[gd_scene load_steps=10 format=3 uid="uid://cvlvfeb6sfr22"]

[ext_resource type="Script" uid="uid://ftwfkixp28o8" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://tagvslp664fi" path="res://assets/coin.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://dhvjbynchffyi" path="res://assets/online.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b1dunkhy32mne" path="res://assets/target.png" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://cl8cogsm1st1f" path="res://assets/items/shield.png" id="5_qlg0r"]

[sub_resource type="GDScript" id="GDScript_g2els"]
script/source = "extends Button
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqkch"]

[sub_resource type="GDScript" id="GDScript_qhqgy"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(111.5, 54.1875)

[node name="Player" type="Node2D"]
script = ExtResource("1_3vyb7")

[node name="Name" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="CoinImg" type="Sprite2D" parent="."]
position = Vector2(6, -12)
scale = Vector2(0.0442623, 0.0586797)
texture = ExtResource("2_g2els")

[node name="Coin" type="Label" parent="."]
offset_left = 18.0
offset_top = -24.0
offset_right = 58.0
offset_bottom = -1.0

[node name="LIAR" type="Button" parent="."]
visible = false
offset_left = -83.0
offset_top = 38.0
offset_right = -16.0
offset_bottom = 69.0
text = "LIAR!"
script = SubResource("GDScript_g2els")

[node name="PassUp" type="Button" parent="."]
visible = false
offset_left = -83.0
offset_top = 78.0
offset_right = -16.0
offset_bottom = 109.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_dqkch")
text = "Pass up"
script = SubResource("GDScript_qhqgy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
top_level = true
z_index = 3
position = Vector2(56.25, 5)
shape = SubResource("RectangleShape2D_dqkch")
debug_color = Color(0.970597, 0, 0.453653, 0.42)

[node name="TurnIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(-17, 14)
scale = Vector2(0.0542492, 0.0514706)
texture = ExtResource("3_qhqgy")

[node name="TargetIndicator" type="Sprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(59, 22)
scale = Vector2(0.178016, 0.167942)
texture = ExtResource("4_dqkch")

[node name="ShieldIndicator" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(92, -1)
scale = Vector2(0.706199, 0.677124)
texture = ExtResource("5_qlg0r")

[node name="Inventory" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -55.0
offset_top = 123.0
offset_right = 110.0
offset_bottom = 163.0

[node name="Item1" type="Node2D" parent="Inventory"]
position = Vector2(17, 10)

[node name="Item2" type="Node2D" parent="Inventory"]
position = Vector2(89, 10)

[node name="Item3" type="Node2D" parent="Inventory"]
position = Vector2(160, 10)

[connection signal="button_down" from="PassUp" to="." method="_on_pass_up_button_down"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
